--- a/notebooks/linear_regression_basics.ipynb
+++ b/notebooks/linear_regression_basics.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<img src=\"images/logo/selene-logo-640.png\" style=\"max-height:75px;\" alt=\"SELENE Logo\" />\n",
     "\n",
-    "**Disclaimer:** This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend to or pull the latest version of this notebook from Github.\n"
+    "**Disclaimer:** This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend to download or pull the latest version of this notebook from Github."
    ]
   },
   {
@@ -33,12 +33,14 @@
    "source": [
     "### Setting up the Notebook\n",
     "\n",
-    "#### Make Required Imports"
+    "#### Make Required Imports\n",
+    "\n",
+    "This notebook requires the import of different Python packages but also additional Python modules that are part of the repository. If a package is missing, use your preferred package manager (e.g., [conda](https://anaconda.org/anaconda/conda) or [pip](https://pypi.org/project/pip/)) to install it. If the code cell below runs with any errors, all required packages and modules have successfully been imported."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "39be3b55-065c-4a8c-818d-1902ffda62eb",
    "metadata": {},
    "outputs": [],
@@ -53,12 +55,14 @@
    "id": "c0c1c53f-7dfb-43ba-a91c-33323aaa104c",
    "metadata": {},
    "source": [
-    "#### Download Required Data"
+    "#### Download Required Data\n",
+    "\n",
+    "Some code examples in this notebook use data that first need to be downloaded by running the code cell below. If this code cell throws any error, please check if the configuration file..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "186f72f7-58b4-4b54-912d-47548c219dea",
    "metadata": {},
    "outputs": [
@@ -156,7 +160,7 @@
     "\n",
     "Notice how weight $w_0$ kind of \"sticks out\" as it is not associated with any feature value. $w_0$ is called the **bias**, or the **intercept**, or the **offset**. The bias term is essential because it allows the model to accurately represent the relationship between input features and the target variable. Without a bias term, the regression line would be forced to pass through the origin, meaning that when all features are zero, the target prediction would also be zero. This assumption is often unrealistic, as the relationship between features and the target variable rarely aligns with the origin, especially in complex datasets. The bias term enables the model to shift vertically, giving it more flexibility to fit the data accurately. Of course, for our motivating example using apartment prices this might not be as relevant since an apartment where all feature values are 0 (e.g., incl its size) is not meaningful.\n",
     "\n",
-    "While the bias $w_0$ is in some sense a special weight, we would like to treat it as any other weight to make our notations even simple. We can accomplish this by introducing a new artificial features $x_i0$ for all data samples. To ensure that this new feature does not change the equations, we need to set all $x_i0 = 1$. Thus, we can rewrite our equation:\n",
+    "While the bias $w_0$ is in some sense a special weight, we would like to treat it as any other weight to make our notations even simple. We can accomplish this by introducing a new artificial features $x_{i0}$ for all data samples. To ensure that this new feature does not change the equations, we need to set all $x_{i0} = 1$. Thus, we can rewrite our equation:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -365,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a670413e-62ea-4f0d-80cd-c0491b33c1b2",
    "metadata": {},
    "outputs": [],
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "354d0e17-5442-4daa-9d12-4e69e3e4c03e",
    "metadata": {},
    "outputs": [
@@ -438,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b9001f70-51e5-40ac-9f76-33aa0593fad5",
    "metadata": {},
    "outputs": [
@@ -485,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b6172d49-ad06-48a1-b195-b5615b069d9c",
    "metadata": {},
    "outputs": [
@@ -553,7 +557,7 @@
        "4             28.2   162.6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "74f6278b-8174-4602-b73f-c4d03dd12ddf",
    "metadata": {},
    "outputs": [],
@@ -599,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "778958ac-0f88-49e3-af93-8adc2f5a2987",
    "metadata": {},
    "outputs": [
@@ -630,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f4669c95-4796-4c36-b34d-01347c65e15c",
    "metadata": {},
    "outputs": [
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "520ff5fc-e5f9-4086-abb8-a30ede5b18ed",
    "metadata": {},
    "outputs": [
@@ -764,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7532822f-38d1-461a-b5f2-00d85e3889ea",
    "metadata": {},
    "outputs": [],
@@ -786,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bbeef1d1-5fba-4a42-90a4-52298c69ce3a",
    "metadata": {},
    "outputs": [
@@ -814,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "a5465bca-be9b-49cd-a228-1d7ddda713d3",
    "metadata": {},
    "outputs": [
@@ -869,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8a7b69ee-97cf-4a8f-b98d-91c49d57a519",
    "metadata": {},
    "outputs": [
@@ -923,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "75f13bd7-a66c-4766-8bfe-19ef7dea42d9",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a8ae3fe4-e4ea-47fb-b6bc-54c8323fc749",
    "metadata": {},
    "outputs": [],
@@ -1061,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ed9a2a52-c3ce-42fd-b3a8-31990f821065",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "4a57cb95-ba4b-4574-b4c1-9d05cfd4eadf",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "42130533-e969-4319-a303-1320ca86ddfa",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "7fcb4ade-a425-4e6a-bac4-43ad7c1844be",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "57f993d3-9737-42b4-aad3-befe3e787c83",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "b6286aa3-b9da-497c-bc29-a925708012e8",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "97ede600-6aa4-4f78-a3e1-d2799b13bedb",
    "metadata": {},
    "outputs": [],
@@ -1346,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "5c1a7ef1-6336-4f37-a62d-f4a5d27642a3",
    "metadata": {},
    "outputs": [
@@ -1387,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "9319e21d-3a14-46f6-a738-5b49687551ba",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "1d9fac3b-62cd-432e-83b3-1291a34deb0d",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "0518eb36-e84c-439f-b1be-63e916d70845",
    "metadata": {},
    "outputs": [
@@ -1512,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "1a2a5010-994a-45bd-8154-10a70f6b1ea2",
    "metadata": {},
    "outputs": [],
@@ -1531,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "cdb18400-0d6a-4f8f-8ff3-c3cb2f1f21e6",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "fd77a59a-655e-4723-b2a4-889257ff363a",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1657,7 @@
        "4             28.2   162.6"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "9c870112-14f7-4b05-951e-cb41d3e6b55a",
    "metadata": {},
    "outputs": [],
@@ -1695,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "e252ca29-dca2-4fec-a878-f60ac86b9367",
    "metadata": {},
    "outputs": [],
@@ -1719,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "1e295e39-6f73-4c86-9469-266a20e5b7b1",
    "metadata": {},
    "outputs": [
@@ -1752,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "3ff9d33a-3151-48fd-9d6c-71d55f1a6c1e",
    "metadata": {},
    "outputs": [
@@ -1786,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "5c4ba1de-e45f-40a8-ab0d-0f6350cab781",
    "metadata": {},
    "outputs": [
@@ -1885,7 +1889,7 @@
        "4      1          5      10     125.0               69   715000.0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "73fbd4a3-0db9-4266-9734-dcb3ffc68c61",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "dca74d2c-68a9-43f4-820e-e2bd938e9cec",
    "metadata": {},
    "outputs": [
@@ -1987,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "945e00ec-ff5c-4e21-8ec8-78ceb93846fa",
    "metadata": {},
    "outputs": [],
@@ -2006,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "91e658ed-887c-4acd-be16-a7b3a252cd17",
    "metadata": {},
    "outputs": [
@@ -2037,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "3753d363-43d4-48ae-9477-c65cbc2ec996",
    "metadata": {},
    "outputs": [],
@@ -2055,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "9047612b-5df1-41a5-821b-4c34e19ee5cd",
    "metadata": {},
    "outputs": [
@@ -2091,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "41fd4b2f-6805-4cf9-a8a5-2319c3b1c2f4",
    "metadata": {},
    "outputs": [],
@@ -2115,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "02a977ad-159e-4290-b4f8-4405b6a2bb56",
    "metadata": {},
    "outputs": [
@@ -2143,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "cc446aab-1cea-41dc-a516-573bf54d8bed",
    "metadata": {},
    "outputs": [
