Remove images/generated/ directory

--- a/notebooks/linear_regression_basics.ipynb
+++ b/notebooks/linear_regression_basics.ipynb
@@ -67,10 +67,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "File 'data/demos/linear-regression/hdb-resale-simplified.csv' already exists (use 'overwrite=True' to overwrite it).\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████| 480k/480k [00:00<00:00, 13.0MiB/s]\n"
      ]
     }
    ],
