--- a/notebooks/linear_regression_basics.ipynb
+++ b/notebooks/linear_regression_basics.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "<img src=\"images/logo/selene-logo-640.png\" style=\"max-height:75px;\" alt=\"SELENE Logo\" />\n",
     "\n",
-    "**Disclaimer:** This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend to download or pull the latest version of this notebook from Github."
+    "**Disclaimer:** This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pull the latest version of this notebook from Github."
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "#### Download Required Data\n",
     "\n",
-    "Some code examples in this notebook use data that first need to be downloaded by running the code cell below. If this code cell throws any error, please check if the configuration file..."
+    "Some code examples in this notebook use data that first need to be downloaded by running the code cell below. If this code cell throws any error, please check the configuration file `config.yaml` if the URL for downloading datasets is up to date and matches the one on Github. If not, simply download or pull the latest version from Github."
    ]
   },
   {
@@ -67,15 +67,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████| 480k/480k [00:00<00:00, 13.0MiB/s]\n"
+      "File 'data/datasets/tabular/regression/example-hdb-resale-price-prediction.csv' already exists (use 'overwrite=True' to overwrite it).\n",
+      "File 'data/datasets/tabular/regression/example-csi-height-prediction.csv' already exists (use 'overwrite=True' to overwrite it).\n"
      ]
     }
    ],
    "source": [
-    "file_hdb_resale, data_folder = download_file(\"data/demos/linear-regression/hdb-resale-simplified.csv\")"
+    "file_hdb_resale, data_folder = download_dataset(\"tabular/regression/example-hdb-resale-price-prediction.csv\")\n",
+    "csi_example, data_folder     = download_dataset(\"tabular/regression/example-csi-height-prediction.csv\")"
    ]
   },
   {
@@ -588,7 +590,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f\"{data_folder}csi-example-data.csv\", index=None)"
+    "df.to_csv(f\"{data_folder}my-csi-example-data.csv\", index=None)"
    ]
   },
   {
@@ -1664,7 +1666,7 @@
    ],
    "source": [
     "# Load data file into pandas DataFrame\n",
-    "df_csi = pd.read_csv(f\"{data_folder}csi-example-data.csv\")\n",
+    "df_csi = pd.read_csv(csi_example)\n",
     "\n",
     "# Show the first 5 entries of the DataFrame\n",
     "df_csi.head()"
