--- a/notebooks/artificial_neural_networks_basics.ipynb
+++ b/notebooks/artificial_neural_networks_basics.ipynb
@@ -5,7 +5,9 @@
    "id": "bfb0c239-f738-4224-85eb-bc4da82da02a",
    "metadata": {},
    "source": [
-    "<img src=\"images/logo/selene-logo-640.png\" style=\"max-height:75px;\" alt=\"SELENE Logo\" />"
+    "<img src=\"images/logo/selene-logo-640.png\" style=\"max-height:75px;\" alt=\"SELENE Logo\" />\n",
+    "\n",
+    "**Disclaimer:** This Jupyter Notebook contains content generated with the assistance of AI. While every effort has been made to review and validate the outputs, users should independently verify critical information before relying on it. The SELENE notebook repository is constantly evolving. We recommend downloading or pulling the latest version of this notebook from Github."
    ]
   },
   {
