--- a/notebooks/word_tokenizer_implementation.ipynb
+++ b/notebooks/word_tokenizer_implementation.ipynb
@@ -15,7 +15,7 @@
    "id": "f870de57-c960-4fa1-8b0b-86ebb7b27c2c",
    "metadata": {},
    "source": [
-    "# Building Word Tokenizer from Scratch\n",
+    "# Building a Word Tokenizer from Scratch\n",
     "\n",
     "## Motivation\n",
     "\n",
