--- a/notebooks/vector_space_model_basics.ipynb
+++ b/notebooks/vector_space_model_basics.ipynb
@@ -122,7 +122,7 @@
    "source": [
     "## Fundamental Idea: Term-Document Matrix\n",
     "\n",
-    "The fundamental idea of the Vector Space model is to represent each document as a vector based on the vocabulary $V$ &dmash; the set of unique terms in a text corpus, where *term* can refer to unigrams (i.e., words), bigrams, trigrams, etc. As such, each document vector is vector of length $|V|$ where the elements of the vector reflect \"some\" representation of the words contained in the document; we will later see how different VSM represent differ with respect to the exact vector values. Combining the vectors for all documents in a corpus $D$ gives as the **Term-Document Matrix** where the rows represent the terms and the columns represent the documents. Assuming a set of terms $t_1, t_2, \\dots, t_{|V|} \\in V$, and the set of documents $d_1, d_2, \\dots, d_{|D|} \\in D$, we can visualize the Term-Document Matrix as a table shown below."
+    "The fundamental idea of the Vector Space model is to represent each document as a vector based on the vocabulary $V$ &mdash; the set of unique terms in a text corpus, where *term* can refer to unigrams (i.e., words), bigrams, trigrams, etc. As such, each document vector is vector of length $|V|$ where the elements of the vector reflect \"some\" representation of the words contained in the document; we will later see how different VSM represent differ with respect to the exact vector values. Combining the vectors for all documents in a corpus $D$ gives as the **Term-Document Matrix** where the rows represent the terms and the columns represent the documents. Assuming a set of terms $t_1, t_2, \\dots, t_{|V|} \\in V$, and the set of documents $d_1, d_2, \\dots, d_{|D|} \\in D$, we can visualize the Term-Document Matrix as a table shown below."
    ]
   },
   {
@@ -1108,7 +1108,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {'elect': 1, 'mayor': 2, 'term': 5, 'win': 4, 'goal': 4, 'vote': 2, 'team': 2, 'player': 3})\n"
+      "defaultdict(<class 'int'>, {'elect': 1, 'mayor': 2, 'term': 5, 'goal': 4, 'win': 4, 'vote': 2, 'player': 3, 'team': 2})\n"
      ]
     }
    ],
