--- a/notebooks/recurrent_neural_networks_basics.ipynb
+++ b/notebooks/recurrent_neural_networks_basics.ipynb
@@ -162,7 +162,7 @@
    "id": "46a0ac1b-060c-4165-81f1-b58d694fbbe1",
    "metadata": {},
    "source": [
-    "Again, just from looking at the architecture image, appreciate that the information flows in one direction from the input to the output &mdash; that is, the inputs are used to calculate the output of the hidden layer, and these results are used to calculate the final output of the output layer. If $\\mathbf{x} = (x_1, x_2, x_3)^T$ denotes the input vector, $\\mathbf{h} = (h_1, h_2, h_3m h_4)^T$ denotes the output vector of the hidden layer, and $\\mathbf{y} = (y_1, y_2)^T$ denotes the output vector of the output layer, we can express the calculations done by the example FNNs using the following equations."
+    "Again, just from looking at the architecture image, appreciate that the information flows in one direction from the input to the output &mdash; that is, the inputs are used to calculate the output of the hidden layer, and these results are used to calculate the final output of the output layer. If $\\mathbf{x} = (x_1, x_2, x_3)^T$ denotes the input vector, $\\mathbf{h} = (h_1, h_2, h_3, h_4)^T$ denotes the output vector of the hidden layer, and $\\mathbf{y} = (y_1, y_2)^T$ denotes the output vector of the output layer, we can express the calculations done by the example FNNs using the following equations."
    ]
   },
   {
