--- a/notebooks/positional_encodings_overview.ipynb
+++ b/notebooks/positional_encodings_overview.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bd04131a-c76a-4629-8e26-ea255445cbaa",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
     "\n",
     "Before delving into the inner works of attention and multi-head attention, there are a few preliminary comments to outline the scope of this notebook:\n",
     " \n",
-    "* Since we focus on the original Transformer, we assume text as input &mdash; in fact, we consider a machine learning task as an example use case throughout the notebook (see below). To make all visualizations, examples, and descriptions easier to understand, we assume that any input text is tokenized into proper words. Note that practical Transformer-based models typically rely on subword-based tokenizers (e.g., Byte-Pair Encoding, WordPiece).\n",
+    "* Since we focus on the original Transformer, we assume text as input. To make all visualizations, examples, and descriptions easier to understand, we assume that any input text is tokenized into proper words. Note that practical Transformer-based models typically rely on subword-based tokenizers (e.g., Byte-Pair Encoding, WordPiece).\n",
     "\n",
     "With these clarifications out of the way, let's get started..."
    ]
