--- a/notebooks/positional_encodings_overview.ipynb
+++ b/notebooks/positional_encodings_overview.ipynb
@@ -196,7 +196,7 @@
    "id": "bdffb7b7-a14f-4c6d-9d83-09b7c5bc1b5f",
    "metadata": {},
    "source": [
-    "What we gained with this method is that the positional embeddings vectors no longer run the risk of dominating the word embedding vectors. Simply speaking, the values in the positional encodings are guaranteed to remain **small**. However, because the values do not depend on the sequence length $L$, the encodings are no longer unique. This means that the vector $\\mathbf{p}_i$ will be different for two sequences that do not have the same length. However, in case of absolute positional encodings, $\\mathbf{p}_{i}$ should always be the same vector encoding position $i$."
+    "What we gained with this method is that the positional embeddings vectors no longer run the risk of dominating the word embedding vectors. Simply speaking, the values in the positional encodings are guaranteed to remain **small**. However, because the values do now depend on the sequence length $L$, the encodings are no longer unique. This means that the vector $\\mathbf{p}_i$ will be different for two sequences that do not have the same length. However, in case of absolute positional encodings, $\\mathbf{p}_{i}$ should always be the same vector encoding position $i$."
    ]
   },
   {
