--- a/notebooks/positional_encodings_overview.ipynb
+++ b/notebooks/positional_encodings_overview.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bd04131a-c76a-4629-8e26-ea255445cbaa",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
    "source": [
     "#### Naive Methods\n",
     "\n",
-    "The arguably most straightforward way to define the positional embedding vectors is to set all elements in the vector for encoding position $i$ to $i itself$ &mdash; that is, $\\mathbf{p}_{ij} = i$, where $\\mathbf{p}_{ij}$ is the $j$-th vector element of the positional embedding vector at position $i$. The figure below illustrates this method."
+    "The arguably most straightforward way to define the positional embedding vectors is to set all elements in the vector for encoding position $i$ to $i$ itself &mdash; that is, $\\mathbf{p}_{ij} = i$, where $\\mathbf{p}_{ij}$ is the $j$-th vector element of the positional embedding vector at position $i$. The figure below illustrates this method."
    ]
   },
   {
@@ -196,7 +196,7 @@
    "id": "bdffb7b7-a14f-4c6d-9d83-09b7c5bc1b5f",
    "metadata": {},
    "source": [
-    "What we gained with this method is that the positional embeddings vectors no longer run the risk of dominating the word embedding vectors. Simply speaking, the values in the positional encodings are guaranteed to remain **small**. However, because the values do now depend on the sequence length $L$, the encodings are no longer unique. This means that the vector $\\mathbf{p}_i$ will be different for two sequences that do not have the same length. However, in case of absolute positional encodings, $\\mathbf{p}_{i}$ should always be the same vector encoding position $i$."
+    "What we gained with this method is that the positional embeddings vectors no longer run the risk of dominating the word embedding vectors. Simply speaking, the values in the positional encodings are guaranteed to remain **small**. However, because the values do not depend on the sequence length $L$, the encodings are no longer unique. This means that the vector $\\mathbf{p}_i$ will be different for two sequences that do not have the same length. However, in case of absolute positional encodings, $\\mathbf{p}_{i}$ should always be the same vector encoding position $i$."
    ]
   },
   {
@@ -415,7 +415,7 @@
     "\\mathbf{p}_{ij} = \n",
     "\\begin{cases} \n",
     "\\sin \\left( \\frac{i}{10000^{2j/d_{model}}} \\right) & \\text{if } j \\text{ is even},\\\\[0.75em]\n",
-    "\\cos \\left( \\frac{i}{10000^{2j/d_{model}}} \\right) & \\text{if } j \\text{ is odd}\n",
+    "\\cos \\left( \\frac{i}{10000^{2(j-1)/d_{model}}} \\right) & \\text{if } j \\text{ is odd}\n",
     "\\end{cases}\n",
     "$$"
    ]
