--- a/notebooks/linear_regression_math.ipynb
+++ b/notebooks/linear_regression_math.ipynb
@@ -272,7 +272,7 @@
     "One straightforward way to avoid negative errors is to sum up the absolute values between the predicted and true values:\n",
     "\n",
     "$$\\large\n",
-    "L_{MAE}(\\hat{\\mathbf{y}}, \\mathbf{y}) = \\sum_i^n \\left| \\hat{y}_i - y_i \\right|\n",
+    "L_{MAE}(\\hat{\\mathbf{y}}, \\mathbf{y}) = \\frac{1}{n} \\sum_i^n \\left| \\hat{y}_i - y_i \\right|\n",
     "$$\n",
     "\n",
     "In principle, this is an appropriate loss function as $L$ is minimized (i.e., $L=0$) if all predictions $\\hat{y}_i$ match the true values $y_i$; and the larger the differences the larger the loss. The problem with the MAE, however, is that it is mathematically \"inconvenient\" for the purpose of training a Linear Regression model. To understand this, let's look at the plot of the function $f(x)=|x|$:"
@@ -326,7 +326,7 @@
     "The common alternative to avoid negative errors without using the absolute function is to square the errors, as the square of any number is always positive. This, in fact, is captured by the MSE we introduced as the common loss function to fit Linear Regression Models:\n",
     "\n",
     "$$\\large\n",
-    "L_{MSE}(\\hat{\\mathbf{y}}, \\mathbf{y}) = \\sum_i^n (\\hat{y}_i - y_i)^{2}\n",
+    "L_{MSE}(\\hat{\\mathbf{y}}, \\mathbf{y}) = \\frac{1}{n} \\sum_i^n (\\hat{y}_i - y_i)^{2}\n",
     "$$\n",
     "\n",
     "Compared to $L_{MAE}$, the $L_{MSE}$ is also differentiable, allowing for finding its minimum without any handling special cases where the derivative of the $L_{MSE}$ would not be defined. We cover the calculation of the derivative in full detail later in this notebook."
@@ -342,7 +342,7 @@
     "Given the MSE loss, a possible question might be why not use larger powers (assuming even powers to ensure only positive errors), i.e.:\n",
     "\n",
     "$$\\large\n",
-    "L_{MEPE}(\\hat{\\mathbf{y}}, \\mathbf{y}) = \\sum_i^n (\\hat{y}_i - y_i)^{k}\n",
+    "L_{MEPE}(\\hat{\\mathbf{y}}, \\mathbf{y}) = \\frac{1}{n} \\sum_i^n (\\hat{y}_i - y_i)^{k}\n",
     "$$\n",
     "\n",
     "where $k = 4, 6, 8, \\dots$ is an even number larger than 2. As this loss is also differentiable, it could be indeed considered an appropriate loss function. Compared to the MSE loss (using a power of 2), larger powers make the loss more susceptible to outliner, that is, where the difference between the predicted and true values is very large compared to the average. In fact, it can be argued that the MSE loss is already susceptible due to squaring the errors. Let's have a quick look by converting a single data point in our CSI example dataset to an outlier:"
